# karl

./: .envrc  .gitignore  .pre-commit-config.yaml  pyproject.toml
karl/: __init__.py  __main__.py  agent.py  cli.py  job.py  mail.py  runner.py
karl/agents/: autodidact.py  email_agent.py  linkedin.py  todo.py
karl/email/: agents.py  tools.py
karl/gitlab/: tools.py
karl/jira/: tools.py
karl/legacy/: imap_tool.py
karl/linkedin/: agents.py
karl/obsidian/: backends.py  tools.py
karl/slack/: tools.py
karl/todoist/: tools.py
karl/tools/: cv.py  email_tools.py  gitlab_tools.py  http.py  jira.py  linkedin.py  search.py  todoist.py
tests/: conftest.py  test_karl.py
tests/linkedin/: test_linkedin_agents.py  test_linkedin_tools.py
tests/linkedin/cassettes/test_linkedin_agents/: test_linkedin_agent.yaml
tests/linkedin/cassettes/test_linkedin_tools/: test_find_past_reply_examples.yaml
tests/obsidian/: test_backends.py
tests/tools/: test_linkedin.py
tests/tools/cassettes/test_linkedin/: test_find_latest_non_replied_chat.pretty_json_yaml
