[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "karl"
dependencies = [
    "langchain >= 1.0.0",
    "langchain-ollama",
    "langchain-mcp-adapters",
    "typer",
    "rich",
    "imapclient",
    "beeper_desktop_api",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-pikachu",
    "pytest-asyncio",
    "pytest-recording",
]

[tool.pytest]
addopts = ["--pikachu"]
testpaths = ["tests"]
