[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "karl"
dependencies = [
    "langchain >= 1.0.0",
    "langchain-mcp-adapters",
    "typer",
    "rich",
    "pypdf",
    "langchain-ollama",
    "langchain-openai",
]

[project.optional-dependencies]
imap = ["imapclient"]
beeper = ["beeper_desktop_api"]
todoist = ["todoist_api_python"]
test = [
    "pytest",
    "pytest-pikachu",
    "pytest-asyncio",
    "pytest-recording",
]

[tool.pytest]
addopts = ["--pikachu"]
testpaths = ["tests"]
